--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <title>kga.earth</title>
   
-  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/site.css" />
 </head>
 <body>
   <div id="about">
