--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
     </div>
   </div>
   <div id="footer">
-    <p>design by <a href="http://jonnotie.nl/">jonnotie</a></p>
-    <!-- Don't remove this link. Respect the designer. If you want to remove it, shoot me an email me@jonnotie.nl -->
+    <p>design by <a href="http://jonnotie.nl/">jonnotie</a> | <a href="https://icons8.com/icon/85232/globe">globe</a> icon by <a href="https://icons8.com">icons8</a></p>
   </div>
 </body>
 </html>
