--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="item" id="charities--the-satanic-temple">
-      <h3>the satanic templte</h3>
+      <h3>the satanic temple</h3>
       <h4>us</h4>
       <div class="description">
         <p><a href="https://thesatanictemple.com/">the satanic temple</a> fights for personal freedoms and bodily autonomy</p>
