--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <p>all my original open-source contributions are Unlicensed and found on my <a href="https://github.com/cinderblockgames/">github</a></p>
       </div>
     </div>
-    <!--<div class="item" id="projects--nano">
+    <div class="item" id="projects--nano">
       <h3>nano</h3>
       <h4>cryptocurrency node</h4>
       <div class="description">
-        <p>my nano node can be found at <a href="https://nano.cinderblockgames.com/">nano.cinderblockgames.com</a></p>
+        <p>my nano node can be found at <a href="https://nano.kga.earth/">nano.kga.earth</a></p>
       </div>
-    </div>-->
+    </div>
   </div>
   <div class="section" id="websites">
     <h2>websites</h2>
