--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/site.css" />
 </head>
 <body>
+  <a id="ribbon" href="https://octoberstrike.com">STRIKE OCTOBER 15</a>
+  
   <div id="about">
     <div id="story">
       <h1>hi, i'm kevin</h1>
