--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/site.css" />
 </head>
 <body>
-  <a id="ribbon" href="https://octoberstrike.com">STRIKE OCTOBER 15</a>
+  <a id="ribbon" href="https://octoberstrike.com">GENERAL STRIKE OCTOBER 15</a>
   
   <div id="about">
     <div id="story">
