Adding banano node to projects

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,13 @@
         <p>my nano node can be found at <a href="https://nano.kga.earth/">nano.kga.earth</a></p>
       </div>
     </div>
+    <div class="item" id="projects--banano">
+      <h3>nano</h3>
+      <h4>cryptocurrency node</h4>
+      <div class="description">
+        <p>my banano node can be found at <a href="https://banano.kga.earth/">banano.kga.earth</a></p>
+      </div>
+    </div>
   </div>
   <div class="section" id="websites">
     <h2>websites</h2>
