--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     </div>
     
     <div class="item" id="projects--banano">
-      <h3>nano</h3>
+      <h3>banano</h3>
       <h4>cryptocurrency node</h4>
       <div class="description">
         <p>my banano node can be found at <a href="https://banano.kga.earth/">banano.kga.earth</a></p>
