consolidating crypto nodes

--- a/src/index.html
+++ b/src/index.html
@@ -28,19 +28,11 @@
       </div>
     </div>
     
-    <div class="item" id="projects--nano">
-      <h3>nano</h3>
-      <h4>cryptocurrency node</h4>
+    <div class="item" id="projects--cryptocurrency">
+      <h3>cryptocurrency</h3>
+      <h4>self-hosted nodes</h4>
       <div class="description">
-        <p>my nano node can be found at <a href="https://nano.kga.earth/">nano.kga.earth</a></p>
-      </div>
-    </div>
-    
-    <div class="item" id="projects--banano">
-      <h3>banano</h3>
-      <h4>cryptocurrency node</h4>
-      <div class="description">
-        <p>my banano node can be found at <a href="https://banano.kga.earth/">banano.kga.earth</a></p>
+        <p>you can find my nano node Nanorlando City at <a href="https://nano.kga.earth/">nano.kga.earth</a> and my banano node Bananorlando City at <a href="https://banano.kga.earth/">banano.kga.earth</a></p>
       </div>
     </div>
   </div>
