--- a/src/index.html
+++ b/src/index.html
@@ -100,11 +100,11 @@
       </div>
     </div>
     
-    <div class="item" id="charities--the-aclu">
-      <h3>the aclu</h3>
+    <div class="item" id="charities--american-civil-liberties-union">
+      <h3>american civil liberties union</h3>
       <h4>us</h4>
       <div class="description">
-        <p>the <a href="https://www.aclu.org/">american civil liberties union</a> fights to protect human rights in the united states</p>
+        <p>the <a href="https://www.aclu.org/">aclu</a> fights to protect human rights in the united states</p>
       </div>
     </div>
   </div>
