Adding waxp.rentals

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,13 @@
         <p><a href="https://homelab.express/">homelab.express</a> hosts a certificate and instructions to get a home lab up and running quickly</p>
       </div>
     </div>
+    
+    <div class="item" id="websites--waxp-rentals">
+      <h3>waxp.rentals</h3>
+      <div class="description">
+        <p><a href="https://waxp.rentals/">waxp.rentals</a> provides cpu and net rentals on the wax blockchain for banano to support the cryptomonKeys nft project</p>
+      </div>
+    </div>
   </div>
   
   <div class="section" id="contact">
