--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <div class="item" id="websites--waxp-rentals">
       <h3>waxp.rentals</h3>
       <div class="description">
-        <p><a href="https://waxp.rentals/">waxp.rentals</a> accepts banano and provides cpu and net rentals on the wax blockchain to support the cryptomonKeys nft project</p>
+        <p><a href="https://waxp.rentals/">waxp.rentals</a> and provides cpu and net rentals on the wax blockchain to support the banano community and the cryptomonKeys nft project</p>
       </div>
     </div>
   </div>
